--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,9 @@
     ]
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.0.5",
     "@chakra-ui/react": "^1.6.5",
+    "@chakra-ui/theme-tools": "1.1.2",
     "@emotion/react": "^11.4.0",
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
@@ -28,7 +30,9 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^14.6.0",
     "@types/react": "17.0.15",
+    "@types/react-dom": "^17.0.3",
     "eslint": "7.32.0",
     "eslint-config-next": "11.0.1",
     "typescript": "4.3.5"
