--- a/web/package.json
+++ b/web/package.json
@@ -18,12 +18,14 @@
       "next/core-web-vitals"
     ]
   },
+  "babelMacros": {
+    "twin": {
+      "preset": "stitches",
+      "stitchesConfig": "styles/stitches.ts"
+    }
+  },
   "dependencies": {
-    "@chakra-ui/icons": "^1.0.5",
-    "@chakra-ui/react": "^1.6.5",
-    "@chakra-ui/theme-tools": "^1.1.9",
-    "@emotion/react": "^11.4.0",
-    "@emotion/styled": "^11.3.0",
+    "@stitches/react": "^0.2.5",
     "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "react": "^17.0.2",
@@ -34,8 +36,12 @@
     "@types/node": "^16.4.9",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.3",
+    "babel-plugin-macros": "^3.1.0",
+    "babel-plugin-twin": "^1.0.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.0",
+    "tailwindcss": "^2.2.7",
+    "twin.macro": "^2.7.0",
     "typescript": "^4.3.5"
   }
 }
