--- a/web/package.json
+++ b/web/package.json
@@ -18,14 +18,8 @@
       "next/core-web-vitals"
     ]
   },
-  "babelMacros": {
-    "twin": {
-      "preset": "stitches",
-      "stitchesConfig": "styles/stitches.ts"
-    }
-  },
   "dependencies": {
-    "@stitches/react": "^0.2.5",
+    "@headlessui/react": "^1.4.0",
     "framer-motion": "^4.1.17",
     "next": "^11.1.0",
     "react": "^17.0.2",
@@ -36,12 +30,11 @@
     "@types/node": "^16.4.9",
     "@types/react": "^17.0.18",
     "@types/react-dom": "^17.0.3",
-    "babel-plugin-macros": "^3.1.0",
-    "babel-plugin-twin": "^1.0.2",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.0",
+    "autoprefixer": "^10.2.6",
+    "postcss": "^8.3.5",
     "tailwindcss": "^2.2.7",
-    "twin.macro": "^2.7.0",
     "typescript": "^4.3.5"
   }
 }
